Add Settings.md document
Reformat application.properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,33 @@
+# See additional information about these properties in the "docs/Settings.md" file.
+
+## Spring Framework Parameters.
+
+### Spring DataBase Options.
 spring.datasource.url=${DB_CONNECTION}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.open-in-view=false
 
+### Spring Cache Options.
 spring.resources.chain.enabled=true
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.html-application-cache=true
 spring.resources.chain.strategy.content.paths=/icon/**,/image/**,/style/**
 spring.resources.cache.cachecontrol.max-age=365d
 
+## Application Parameters.
+
+### General Options.
 general.lang=ru
 general.username-tag=%username%
 general.date-format=dd-MMM-yyyy HH:mm:ss
 general.url-host-ip=https://ipecho.net/plain
 
+### Site Options.
 site.address=${HOST}
 site.page-posts=20
 site.page-deep=5
@@ -26,13 +35,14 @@ site.page-posts-admin=50
 site.page-deep-admin=10
 site.motofan-chat-slug=@motofan_ru
 site.moderators=yakimka,mbv06
-site.proxy=//digest.exlmoto.ru/proxy/
 site.proxy-enabled=true
+site.proxy=//digest.exlmoto.ru/proxy/
 site.autolinker-enabled=true
 site.obey-protection=true
 site.obey-debug-password=password
 site.obey-debug-role=Owner
 
+### Telegram Bot Options.
 bot.initialize=true
 bot.token=${TG_TOKEN}
 bot.admins=exlmoto,ZorgeR
@@ -47,8 +57,8 @@ bot.cooldown=5
 bot.message-delay=5
 bot.sticker-coffee=CAADAgADzAEAAhGoNAVFRRJu94qe3gI
 bot.url-game=https://api.z-lab.me/img/lgsl/servers_stats.png
-# -1001045117849 is MotoFan.Ru chat.
-# -1001148683293 is Debug chat.
+### -1001045117849 is MotoFan.Ru chat.
+### -1001148683293 is Debug chat.
 bot.motofan-chat-id=${TG_CHAT}
 bot.motofan-chat-url=https://t.me/motofan_ru/
 bot.telegram-short-url=https://t.me/
@@ -56,22 +66,26 @@ bot.max-digest-length=400
 bot.show-page-posts=20
 bot.digest-page-posts=10
 bot.digest-page-deep=3
-# 45 sec for debug.
-# 43200 for 12-hours.
-# 86400 for 24-hours.
-# 172800 for 48-hours.
-# 604800 for a week.
-# 648000 for a week + one day.
+### 45 seconds for debug.
+### 43200 seconds for 12-hours.
+### 86400 seconds for 24-hours.
+### 172800 seconds for 48-hours.
+### 604800 seconds for a week.
+### 648000 seconds for a week + one day.
 bot.obsolete-data-delay=648000
 
+### Rest Template Options.
 rest.timeout-sec=10
 rest.max-body-size=5242880
 
+### Image Downloader Options.
 image.download-file=true
 image.use-image-io-read=true
 
+### MotoFan.Ru Crawler Options.
 motofan.last-post-url=https://forum.motofan.ru/lastpost_json.php
 
+### Exchange Rate Options.
 exchange.bank-ru=https://www.cbr.ru/scripts/XML_daily.asp?
 exchange.bank-ru-mirror=https://www.cbr-xml-daily.ru/daily.xml
 exchange.bank-ua=https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange
@@ -81,23 +95,25 @@ exchange.bank-kz=https://nationalbank.kz/rss/rates_all.xml?switch=russian
 exchange.metal-ru=https://www.cbr.ru/hd_base/metall/metall_base_new/
 exchange.metal-ru-mirror=https://mfd.ru/centrobank/preciousmetals/
 
+### Covid Service Options.
 covid.url=https://covid.2gis.ru/
 covid.date-format=dd-MMM-yyyy
 
-# When changing these settings, be sure to update the l10n files.
-# See "site.help.other" property and /subscribe command help on website.
-
-# At 03:00 every day.
+### Cron Options.
+### When changing these cron settings, be sure to update the l10n files.
+### See "site.help.other" property and /subscribe command help on website.
+###
+### At 03:00 every day.
 cron.bot.callbacks.clear=0 0 3 * * *
-# At 04:00 every day.
+### At 04:00 every day.
 cron.bot.avatars.update=0 0 4 * * *
-# At every 20th minute.
+### At every 20th minute.
 cron.bot.motofan.receiver=0 */20 * * * *
-# At 05:00 on Monday.
+### At 05:00 on Monday.
 cron.bot.digest.shredder=0 0 5 * * MON
-# At 15:00 every day.
+### At 15:00 every day.
 cron.bot.covid.report=0 0 15 * * *
-# At 07:00 every day.
+### At 07:00 every day.
 cron.bot.morning.send=0 0 7 * * *
-# At 13:00 every day.
+### At 13:00 every day.
 cron.exchange.rates.update=0 0 13 * * *
