Fix some typos and markup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 
 ## Spring Framework Parameters.
 
-### Spring DataBase Options.
+### Spring Database Options.
 spring.datasource.url=${DB_CONNECTION}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
@@ -95,7 +95,7 @@ exchange.bank-kz=https://nationalbank.kz/rss/rates_all.xml?switch=russian
 exchange.metal-ru=https://www.cbr.ru/hd_base/metall/metall_base_new/
 exchange.metal-ru-mirror=https://mfd.ru/centrobank/preciousmetals/
 
-### Covid Service Options.
+### COVID Service Options.
 covid.url=https://covid.2gis.ru/
 covid.date-format=dd-MMM-yyyy
 
