--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,8 @@ dependencies {
 	implementation 'com.github.pengrad:java-telegram-bot-api:4.6.0'
 	implementation 'org.nibor.autolink:autolink:0.10.0'
 	implementation 'org.owasp.encoder:encoder:1.2.2'
+	implementation 'org.apache.poi:poi:4.1.2'
+	implementation 'org.apache.poi:poi-ooxml:4.1.2'
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
