--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -117,3 +117,5 @@ cron.bot.covid.report=0 0 15 * * *
 cron.bot.morning.send=0 0 7 * * *
 ### At 13:00 every day.
 cron.exchange.rates.update=0 0 13 * * *
+### At 11:00 and 23:00 every day.
+cron.flat.report.send=0 0 11,23 * * *
