--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,7 +38,7 @@ site.moderators=yakimka,mbv06
 site.proxy-enabled=true
 site.proxy=//digest.exlmoto.ru/proxy/
 site.autolinker-enabled=true
-site.obey-protection=true
+site.obey-protection=${PROTECT}
 site.obey-debug-password=password
 site.obey-debug-role=Owner
 
