Shredder for digests now optional

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -73,6 +73,7 @@ bot.digest-page-deep=3
 ### 604800 seconds for a week.
 ### 648000 seconds for a week + one day.
 bot.obsolete-data-delay=648000
+bot.digest-shredder=true
 
 ### Rest Template Options.
 rest.timeout-sec=10
