Use simple http client instead of OkHttp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -78,6 +78,7 @@ bot.digest-shredder=true
 ### Rest Template Options.
 rest.timeout-sec=10
 rest.max-body-size=5242880
+rest.simple-http-client=true
 
 ### Image Downloader Options.
 image.download-file=true
