Add logging level parameter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,10 @@ spring.resources.cache.cachecontrol.max-age=365d
 
 ## Application Parameters.
 
+### Logging Level.
+### TRACE > DEBUG > INFO > WARN > ERROR > FATAL > OFF.
+logging.level.root=INFO
+
 ### General Options.
 general.lang=ru
 general.username-tag=%username%
