Add additional update rates time

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -121,7 +121,7 @@ cron.bot.digest.shredder=0 0 5 * * MON
 cron.bot.covid.report=0 0 15 * * *
 ### At 07:00 every day.
 cron.bot.morning.send=0 0 7 * * *
-### At 13:00 every day.
-cron.exchange.rates.update=0 0 13 * * *
-### At 06:00 and 18:00 every day.
+### At 13:00 and 16:00 twice a day.
+cron.exchange.rates.update=0 0 13,16 * * *
+### At 06:00 and 18:00 twice a day.
 cron.flat.report.send=0 0 6,18 * * *
