Disable proxying due Telegram unblocking by RKN

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,7 +39,7 @@ site.page-posts-admin=50
 site.page-deep-admin=10
 site.motofan-chat-slug=@motofan_ru
 site.moderators=yakimka,mbv06
-site.proxy-enabled=true
+site.proxy-enabled=false
 site.proxy=//digest.exlmoto.ru/proxy/
 site.autolinker-enabled=true
 site.obey-protection=${PROTECT}
