Add fake user agent option

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -83,6 +83,7 @@ bot.digest-shredder=true
 rest.timeout-sec=10
 rest.max-body-size=5242880
 rest.simple-http-client=true
+rest.fake-user-agent=Mozilla/5.0 (X11; Fedora; Linux x86_64; rv:80.0) Gecko/20100101 Firefox/80.0
 
 ### Image Downloader Options.
 image.download-file=true
