Use AWS Service for determining external IP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ logging.level.root=INFO
 general.lang=ru
 general.username-tag=%username%
 general.date-format=dd-MMM-yyyy HH:mm:ss
-general.url-host-ip=https://ipecho.net/plain
+general.url-host-ip=https://checkip.amazonaws.com
 
 ### Site Options.
 site.address=${HOST}
