--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.resources.cache.cachecontrol.max-age=365d
 
 ### Logging Level.
 ### TRACE > DEBUG > INFO > WARN > ERROR > FATAL > OFF.
-logging.level.root=INFO
+logging.level.root=${LOGGING:#{INFO}}
 
 ### General Options.
 general.lang=ru
