Add image to text rendering for COVID-19 reports

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -105,6 +105,7 @@ exchange.metal-ru-mirror=https://mfd.ru/centrobank/preciousmetals/
 ### COVID Service Options.
 covid.url=https://covid.2gis.ru/
 covid.date-format=dd-MMM-yyyy
+covid.text.to.image=true
 
 ### Cron Options.
 ### When changing these cron settings, be sure to update the l10n files.
