Add new option for Game API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,6 +60,7 @@ bot.use-stack=true
 bot.cooldown=5
 bot.message-delay=5
 bot.sticker-coffee=CAADAgADzAEAAhGoNAVFRRJu94qe3gI
+bot.url-game-image=true
 bot.url-game=https://api.z-lab.me/img/lgsl/servers_stats.png
 ### -1001045117849 is MotoFan.Ru chat.
 ### -1001148683293 is Debug chat.
