Change raw game server url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,8 +62,8 @@ bot.message-delay=5
 bot.sticker-coffee=CAADAgADzAEAAhGoNAVFRRJu94qe3gI
 bot.url-game-image=false
 ### https://api.z-lab.me/img/lgsl/servers_stats.png is image API.
-### q2.exlmoto.ru is raw game server.
-bot.url-game=q2.exlmoto.ru
+### game.exlmoto.ru is raw game server.
+bot.url-game=game.exlmoto.ru
 ### -1001045117849 is MotoFan.Ru chat.
 ### -1001148683293 is Debug chat.
 bot.motofan-chat-id=${TG_CHAT}
