Move short date format to general settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,7 @@ logging.level.root=${LOGGING:#{INFO}}
 general.lang=ru
 general.username-tag=%username%
 general.date-format=dd-MMM-yyyy HH:mm:ss
+general.date-short-format=dd-MMM-yyyy
 general.url-host-ip=https://checkip.amazonaws.com
 
 ### Site Options.
@@ -107,7 +108,6 @@ exchange.metal-ru-mirror=https://mfd.ru/centrobank/preciousmetals/
 
 ### COVID Service Options.
 covid.url=https://covid.2gis.ru/
-covid.date-format=dd-MMM-yyyy
 covid.text.to.image=true
 
 ### Cron Options.
