--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -120,12 +120,12 @@ cron.bot.callbacks.clear=0 0 3 * * *
 cron.bot.avatars.update=0 0 4 * * *
 ### At every 20th minute.
 cron.bot.motofan.receiver=0 */20 * * * *
+### At 07:00 every day.
+cron.bot.motofan.birthdays=0 0 7 * * *
 ### At 05:00 on Monday.
 cron.bot.digest.shredder=0 0 5 * * MON
 ### At 15:00 every day.
 cron.bot.covid.report=0 0 15 * * *
-### At 07:00 every day.
-cron.bot.morning.send=0 0 7 * * *
 ### At 13:00 and 16:00 twice a day.
 cron.exchange.rates.update=0 0 13,16 * * *
 ### At 06:00 and 18:00 twice a day.
