--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -121,7 +121,7 @@ cron.bot.avatars.update=0 0 4 * * *
 ### At every 20th minute.
 cron.bot.motofan.receiver=0 */20 * * * *
 ### At 07:00 every day.
-cron.bot.motofan.birthdays=0 0 7 * * *
+cron.bot.motofan.birthday=0 0 7 * * *
 ### At 05:00 on Monday.
 cron.bot.digest.shredder=0 0 5 * * MON
 ### At 15:00 every day.
