Add localized day of week to date format

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,7 @@ general.lang=ru
 general.username-tag=%username%
 general.date-format=dd-MMM-yyyy HH:mm:ss
 general.date-short-format=dd-MMM-yyyy
+general.date-day-format=dd-MMMM-yyyy, EEEE
 general.url-host-ip=https://checkip.amazonaws.com
 
 ### Site Options.
