--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -63,9 +63,10 @@ bot.cooldown=5
 bot.message-delay=5
 bot.sticker-coffee=CAADAgADzAEAAhGoNAVFRRJu94qe3gI
 bot.url-game-image=false
-### https://api.z-lab.me/img/lgsl/servers_stats.png is image API.
-### game.exlmoto.ru is raw game server.
-bot.url-game=game.exlmoto.ru
+bot.url-game-use-own-name=false
+bot.url-game=https://api.z-lab.me/img/lgsl/servers_stats.png
+bot.url-game-quake2=game.exlmoto.ru
+bot.url-game-quake3=q3.z-lab.me
 ### -1001045117849 is MotoFan.Ru chat.
 ### -1001148683293 is Debug chat.
 bot.motofan-chat-id=${TG_CHAT}
