Improve version revision format
Improve Change Log document.

--- a/build.gradle
+++ b/build.gradle
@@ -77,10 +77,12 @@ test {
 }
 
 def getShortGitRevision() {
+	def commit = 'git rev-parse --short HEAD'
+	def count = 'git rev-list --count HEAD'
 	try {
-		return 'git rev-parse --short HEAD'.execute().text.trim()
+		return [commit.execute().text.trim(), count.execute().text.trim()].join('_')
 	} catch (IOException ignored) {
-		logger.warn('Cannot get Git Revision. Is Git installed?')
+		logger.warn('Cannot get information from Git commands. Is Git installed?')
 		return 'unknown'
 	}
 }
