Fixed some warnings in resource files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,11 +13,10 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.open-in-view=false
 
 ### Spring Cache Options.
-spring.resources.chain.enabled=true
-spring.resources.chain.strategy.content.enabled=true
-spring.resources.chain.html-application-cache=true
-spring.resources.chain.strategy.content.paths=/icon/**,/image/**,/style/**
-spring.resources.cache.cachecontrol.max-age=365d
+spring.web.resources.chain.enabled=true
+spring.web.resources.chain.strategy.content.enabled=true
+spring.web.resources.chain.strategy.content.paths=/icon/**,/image/**,/style/**
+spring.web.resources.cache.cachecontrol.max-age=365d
 
 ## Application Parameters.
 
