--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@
 
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '2.4.0'
+	id 'org.springframework.boot' version '2.4.1'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 }
 
@@ -60,6 +60,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 
 	runtimeOnly 'org.postgresql:postgresql'
 
