--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -125,9 +125,11 @@ cron.bot.motofan.receiver=0 */20 * * * *
 cron.bot.motofan.birthday=0 0 7 * * *
 ### At 05:00 on Monday.
 cron.bot.digest.shredder=0 0 5 * * MON
-### At 15:00 every day.
-cron.bot.covid.report=0 0 15 * * *
 ### At 13:00 and 16:00 twice a day.
 cron.exchange.rates.update=0 0 13,16 * * *
+### At 14:00 every day.
+cron.exchange.rates.send=0 0 14 * * *
+### At 15:00 every day.
+cron.bot.covid.report=0 0 15 * * *
 ### At 06:00 and 18:00 twice a day.
 cron.flat.report.send=0 0 6,18 * * *
