Implement saving Bitcoin rates to DataBase
Add Bitcoin Rate Parser from https://bitpay.com/

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -106,6 +106,7 @@ exchange.bank-by=https://nbrb.by/Services/XmlExRates.aspx
 exchange.bank-kz=https://nationalbank.kz/rss/rates_all.xml?switch=russian
 exchange.metal-ru=https://www.cbr.ru/hd_base/metall/metall_base_new/
 exchange.metal-ru-mirror=https://mfd.ru/centrobank/preciousmetals/
+exchange.bitcoin=https://bitpay.com/api/rates
 
 ### COVID Service Options.
 covid.url=https://covid.2gis.ru/
