Separate MotoFan.Ru user birthdays from greetings setting

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,6 +56,7 @@ bot.max-send-length=4000
 bot.disable-notifications=true
 bot.log-updates=false
 bot.show-greetings=true
+bot.send-motofan-birthdays=false
 bot.silent=false
 bot.use-stack=true
 bot.cooldown=5
