--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -121,8 +121,8 @@ covid.text.to.image=true
 cron.bot.callbacks.clear=0 0 3 * * *
 ### At 04:00 every day.
 cron.bot.avatars.update=0 0 4 * * *
-### At every 20th minute.
-cron.bot.motofan.receiver=0 */20 * * * *
+### At every 2nd minute.
+cron.bot.motofan.receiver=0 */2 * * * *
 ### At 07:00 every day.
 cron.bot.motofan.birthday=0 0 7 * * *
 ### At 05:00 on Monday.
