Add button captcha option

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,6 +57,7 @@ bot.disable-notifications=true
 bot.log-updates=false
 bot.show-greetings=true
 bot.send-motofan-birthdays=false
+bot.use-button-captcha=false
 bot.silent=false
 bot.use-stack=true
 bot.cooldown=5
