Add links to the RBC and AliExpress quotes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -108,6 +108,8 @@ exchange.bank-kz=https://nationalbank.kz/rss/rates_all.xml?switch=russian
 exchange.metal-ru=https://www.cbr.ru/hd_base/metall/metall_base_new/
 exchange.metal-ru-mirror=https://mfd.ru/centrobank/preciousmetals/
 exchange.bitcoin=https://bitpay.com/api/rates
+exchange.rbc=https://www.rbc.ru/v10/ajax/key-indicator-update/
+exchange.aliexpress=https://track24.ru/ajax/currency.ajax.php
 
 ### COVID Service Options.
 covid.url=https://covid.2gis.ru/
