Change username in systemd services

--- a/util/digest.service
+++ b/util/digest.service
@@ -4,7 +4,7 @@ Wants=network-online.target
 After=network.target network-online.target postgresql.service
 
 [Service]
-User=opc
+User=exl
 WorkingDirectory=/srv/
 ExecStart=/usr/bin/java -jar /srv/digest-service-1.0.1.jar
 StandardOutput=journal
