--- a/util/q2ded/q2ded.service
+++ b/util/q2ded/q2ded.service
@@ -4,7 +4,7 @@ Wants=network-online.target
 After=network.target network-online.target
 
 [Service]
-User=opc
+User=exl
 WorkingDirectory=/srv/quake2
 ExecStart=/usr/bin/stdbuf -i0 -o0 -e0 /srv/quake2/q2ded
 StandardOutput=journal
