Add CAPTCHA configuration and polish code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -85,6 +85,8 @@ bot.digest-page-deep=3
 ### 648000 seconds for a week + one day.
 bot.obsolete-data-delay=648000
 bot.digest-shredder=true
+bot.captcha-delay=60
+bot.captcha-ban=86400
 
 ### Rest Template Options.
 rest.timeout-sec=10
