--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -84,7 +84,7 @@ bot.digest-page-deep=3
 ### 604800 seconds for a week.
 ### 648000 seconds for a week + one day.
 bot.obsolete-data-delay=648000
-bot.digest-shredder=true
+bot.digest-shredder=false
 bot.captcha-delay=60
 bot.captcha-ban=86400
 
