--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -124,8 +124,8 @@ covid.text.to.image=true
 ###
 ### At 03:00 every day.
 cron.bot.callbacks.clear=0 0 3 * * *
-### At 04:00 every day.
-cron.bot.avatars.update=0 0 4 * * *
+### At 04:00, 12:00, and 19:00 three times a day.
+cron.bot.avatars.update=0 0 4,12,19 * * *
 ### At every 2nd minute.
 cron.bot.motofan.receiver=0 */2 * * * *
 ### At 07:00 every day.
