--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -113,6 +113,7 @@ exchange.metal-ru-mirror=https://mfd.ru/centrobank/preciousmetals/
 exchange.bitcoin=https://bitpay.com/api/rates
 exchange.rbc=https://www.rbc.ru/v10/ajax/key-indicator-update/
 exchange.aliexpress=https://track24.ru/ajax/currency.ajax.php
+exchange.aliexpress-helpix=https://helpix.ru/currency/
 
 ### COVID Service Options.
 covid.url=https://covid.2gis.ru/
