Add config value for helpix
Update ChangeLog.md document

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -114,6 +114,7 @@ exchange.bitcoin=https://bitpay.com/api/rates
 exchange.rbc=https://www.rbc.ru/v10/ajax/key-indicator-update/
 exchange.aliexpress=https://track24.ru/ajax/currency.ajax.php
 exchange.aliexpress-helpix=https://helpix.ru/currency/
+exchange.use-helpix=true
 
 ### COVID Service Options.
 covid.url=https://covid.2gis.ru/
