Update amdins and moderators

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,7 +39,7 @@ site.page-deep=5
 site.page-posts-admin=50
 site.page-deep-admin=10
 site.motofan-chat-slug=@motofan_ru
-site.moderators=yakimka,mbv06
+site.moderators=Finnetr,baaaaat
 site.proxy-enabled=false
 site.proxy=//digest.exlmoto.ru/proxy/
 site.autolinker-enabled=true
@@ -50,7 +50,7 @@ site.obey-debug-role=Owner
 ### Telegram Bot Options.
 bot.initialize=true
 bot.token=${TG_TOKEN}
-bot.admins=exlmoto,ZorgeR
+bot.admins=exlmoto,ZorgeR,Synergy
 bot.max-updates=25
 bot.max-send-length=4000
 bot.disable-notifications=true
