--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,6 +69,7 @@ bot.url-game=https://api.z-lab.me/img/lgsl/servers_stats.png
 bot.url-game-quake2=game.exlmoto.ru
 bot.url-game-quake3=q3.z-lab.me
 ### -1001045117849 is MotoFan.Ru chat.
+### -1001804789551 is siepatchdb@c.j.r
 ### -1001148683293 is Debug chat.
 bot.motofan-chat-id=${TG_CHAT}
 bot.motofan-chat-url=https://t.me/motofan_ru/
@@ -87,6 +88,8 @@ bot.obsolete-data-delay=648000
 bot.digest-shredder=false
 bot.captcha-delay=60
 bot.captcha-ban=86400
+bot.captcha-chat-id-motofan=-1001045117849
+bot.captcha-chat-id-siepatchdb=-1001804789551
 
 ### Rest Template Options.
 rest.timeout-sec=10
