--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -109,7 +109,7 @@ exchange.bank-ru=https://www.cbr.ru/scripts/XML_daily.asp?
 exchange.bank-ru-mirror=https://www.cbr-xml-daily.ru/daily.xml
 exchange.bank-ua=https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange
 exchange.bank-ua-mirror=https://pf-soft.net/service/currency/
-exchange.bank-by=https://nbrb.by/Services/XmlExRates.aspx
+exchange.bank-by=https://services.nbrb.by/xmlexrates.aspx
 exchange.bank-kz=https://nationalbank.kz/rss/rates_all.xml?switch=russian
 exchange.metal-ru=https://www.cbr.ru/hd_base/metall/metall_base_new/
 exchange.metal-ru-mirror=https://mfd.ru/centrobank/preciousmetals/
