Improve Motorola Captcha

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -86,10 +86,9 @@ bot.digest-page-deep=3
 ### 648000 seconds for a week + one day.
 bot.obsolete-data-delay=648000
 bot.digest-shredder=false
-bot.captcha-delay=60
-bot.captcha-ban=86400
-bot.captcha-chat-id-motofan=-1001045117849
-bot.captcha-chat-id-siepatchdb=-1001804789551
+bot.captcha-delay=90
+bot.captcha-ban=300
+bot.captcha-contact=@exlmoto
 
 ### Rest Template Options.
 rest.timeout-sec=10
